Fixed header jumping on loading

--- a/LastApple.Web/ClientApp/src/index.css
+++ b/LastApple.Web/ClientApp/src/index.css
@@ -158,6 +158,10 @@ h1, h2, h3, h4, h5, h6 {
     color: #FFFFFF77 !important;
 }
 
+.header .title-container {
+    margin: 5px 0 5px;
+}
+
 .header h2 {
     font-size: 36px;
 }
@@ -189,6 +193,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (max-width: 480px) {
+    .header .title-container {
+        margin: 2px 0 1px;
+    }
+    
     .header h2 {
         font-size: 30px;
     }
